stuck on  the custom csspart

--- a/css/index.css
+++ b/css/index.css
@@ -2,3 +2,7 @@
     background: url('../images/image1.jpg') no-repeat center ;
     background-size: cover;
 }
+
+section { 
+    background-color: red;
+}
